k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api
  namespace: incident-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: incident-api
  template:
    metadata:
      labels:
        app: incident-api
    spec:
      serviceAccountName: backend-incident-sa
      containers:
        - name: incident-api
          image: 816069145490.dkr.ecr.us-east-1.amazonaws.com/cloud-incident-api:v2
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"         # tối đa 0.5 CPU
              memory: "512Mi"     # tối đa 512Mi RAM
            requests:
              cpu: "250m"         # đảm bảo ít nhất 0.25 CPU
              memory: "256Mi"
