k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-backend-svc
  namespace: incident-system
spec:
  type: ClusterIP
  selector:
    app: incident-api
  ports:
  - port: 80
    targetPort: 8000
